fixed modal flexwrap for modals

--- a/src/WorkModal.css
+++ b/src/WorkModal.css
@@ -1,5 +1,6 @@
 .modal-row {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .modal-row > * {
